# ai-self-review

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  config.json  config_loader.py  fetch_prs.py  merged_prs_2025.json  pyproject.toml  self_review_summary.md  summarize_prs.py
backend/: __init__.py  api.py  config_loader.py  fetch_prs.py  models.py  prompts.py  summarize_prs.py
frontend/: package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ConfigEditor.css  ConfigEditor.jsx  JobRequirements.css  JobRequirements.jsx  SelfReviewSummary.css  SelfReviewSummary.jsx
